# TextForge

./: .gitignore  BUILD.bazel  MODULE.bazel  README.md  WORKSPACE  defs.bzl  requirements_lock.txt
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md
.github/workflows/: build.yml  linter.yml  tests.yml
src/: __main__.py  file.py  forge.py  metadata.py  textforgetest.py
